--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,35 +1,35 @@
-<% unless @project.errors.empty? %>
-    <strong>Błędy</strong>
+<section>
+  <%= form_for @project do |project_form| %>
 
-    <ul>
-    <% @project.errors.full_messages.each do |error_message| %>
-        <li><%= error_message %></li>
-    <% end %>
-    </ul>
-<% end %>
+        <% errors = @project.errors.full_messages
+           unless errors.empty? %>
+            <% errors.each do |error| %>
+              <p><%= error %></p>
+          <% end %>
+      <% end %>
 
-<%= form_for @project do |project_form| %>
-    <p>
-      <%= project_form.label :title %><br />
-      <%= project_form.text_field :title %>
-    </p>
+      <p>
+        <%= project_form.label :title %><br/>
+        <%= project_form.text_field :title %>
+      </p>
 
-    <p>
-      <%= project_form.label :description %><br />
-      <%= project_form.text_area :description %>
-    </p>
+      <p>
+        <%= project_form.label :description %><br/>
+        <%= project_form.text_area :description %>
+      </p>
 
-    <p>
-      <%= project_form.label :goal %><br />
-      <%= project_form.text_field :goal %>
-    </p>
+      <p>
+        <%= project_form.label :goal %><br/>
+        <%= project_form.text_field :goal %>
+      </p>
 
-    <p>
-      <%= project_form.label :deadline %><br />
-      <%= project_form.datetime_select :deadline %>
-    </p>
+      <p>
+        <%= project_form.label :deadline %><br/>
+        <%= project_form.date_select :deadline %>
+      </p>
+      <p>
+        <%= project_form.submit %>
+      </p>
 
-    <p>
-      <%= project_form.submit %>
-    </p>
-<% end %>
+  <% end %>
+</section>
