--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,2 +1,13 @@
-<h1>Projects#show</h1>
-<p>Find me in app/views/projects/show.html.erb</p>
+<% proj_temp = request.original_url%>
+
+<section>
+  <%= puts @project %>
+      <article>
+        <h2>zedez</h2>
+        <p>hd</p>
+        <div>
+          <a href="#">More</a>
+        </div>
+      </article>
+
+</section>
