--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,3 +1,80 @@
-// Place all the styles related to the Projects controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+section{
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  overflow: auto;
+  margin: 100px 0;
+}
+article {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  background-color: rgba(255,255,255,0.8);
+  float: left;
+  width: 30%;
+  height: 300px;
+  margin: 0 5% 5% 0;
+  padding: 2rem;
+  position: relative;
+}
+article:nth-child(3n) {
+  margin-right: 0;
+}
+article:nth-child(3n+1):last-child {
+  width: 100%;
+  margin-right: 0;
+}
+article:nth-child(3n + 1):nth-last-child(2) {
+  width: 47.5%;
+}
+
+article:nth-child(3n + 1):nth-last-child(2) + article {
+  width: 47.5%;
+  margin-right: 0;
+}
+.btn_more {
+  margin: 0 auto;
+  width: 80px;
+  padding: 20px 0;
+  border-radius: 2px;
+  border: 1px solid royalblue;
+  cursor: pointer;
+  text-align: center;
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  right: 0;
+}
+.btn_more a{
+  color: royalblue;
+  font-size: 1rem;
+  text-decoration: none;
+  padding: 20px 0;
+}
+form {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  background-color: rgba(255,255,255,0.8);
+  width: 50%;
+  margin: 0 auto;
+  padding: 2rem;
+  overflow: auto;
+
+}
+input,
+textarea {
+  background-color: rgba(0,0,0,.2);
+  width: 96%;
+  margin: 5px 0;
+}
+select {
+  height: 40px;
+  background-color: rgba(0,0,0,.2);
+}
+input {
+  height: 40px;
+}
+input[type="submit"] {
+  width: 40%;
+  float: right;
+  background-color: rgb(150,200,130);
+}
+
