--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,27 +2,15 @@
 <html>
 <head>
   <title>Gitstarter</title>
-
-  <%= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Roboto' %>
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag  'http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300&subset=latin,latin-ext' %>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<header>
-  <h1><span>Gitstarter</span></h1>
-  <hr/>
-</header>
-
-<main>
-  <%= yield %>
-</main>
-
-<footer>
-  <hr/>
-  &copy; Workshop 2015
-</footer>
-
+    <main>
+        <h1>Gitstarter, <br/>platform for creative projects</h1>
+        <%= yield %>
+    </main>
 </body>
 </html>
