--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,11 +1,15 @@
-[<a href="/projects/new">Add new Project</a>]
-
-<hr />
-
-<h2>All Projects</h2>
-
-<ul>
+<div class="btn_box">
+    <a href="/projects/new">Add new Project</a>
+</div>
+<section>
   <% @projects.each do |project| %>
-      <li>[<%= project.id %>] <%= project.title %></li>
-  <% end %>
-</ul>
+      <article>
+        <h2><%= project.title %> </h2>
+        <p><%= project.description %> </p>
+        <div class="btn_more">
+          <a href="/projects/show?id=<%=project.id%>">More</a>
+        </div>
+      </article>
+  <%end%>
+
+</section>
