--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,15 +1,17 @@
 <div class="btn_box">
-    <a href="/projects/new">Add new Project</a>
+  <a href="/projects/new">Add new Project</a>
 </div>
+
 <section>
   <% @projects.each do |project| %>
       <article>
         <h2><%= project.title %> </h2>
+
         <p><%= project.description %> </p>
+
         <div class="btn_more">
-          <a href="/projects/show?id=<%=project.id%>">More</a>
+          <%= link_to 'More', project %>
         </div>
       </article>
-  <%end%>
-
+  <% end %>
 </section>
