--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -7,7 +7,7 @@
         <h2><%= project.title %> </h2>
         <p><%= project.description %> </p>
         <div class="btn_more">
-          <a href="/projects/show?id=<%=project.id%>">More</a>
+          <%= link_to 'More', project%>
         </div>
       </article>
   <%end%>
