Fix typo in index.html.erb

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
 <p class="headline">Building a community of backers around an idea is an amazing way to make something new. You immediately feel like you’re part of a larger club of art-supporting fanatics.</p>
 <div class="btn_box">
-  <a href="/projects">View Projets</a>
+  <a href="/projects">View Projects</a>
 </div>
