--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -38,10 +38,10 @@ h2 {
   text-align: center;
   color: #fff;
   font-size: 2rem;
-  margin: 0 0 100px 0;
+  margin: 0 0 80px 0;
 }
 .btn_box {
-  margin: 0 auto;
+  margin: 40px auto;
   width: 200px;
   padding: 20px 0;
   border-radius: 2px;
