Edit Add new Project button to use link_to method

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,5 +1,5 @@
 <div class="btn_box">
-  <a href="/projects/new">Add new Project</a>
+  <%= link_to 'Add new Project', {:action => 'new'} %>
 </div>
 
 <section>
