--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,8 +1,12 @@
+<% proj_temp = request.original_url%>
+
 <section>
+  <%= puts @project %>
+  <article>
+    <h2> <%= @project.title %></h2>
+    <p> <%= @project.description %></p>
+    </br>
+    <p> <b><%= @project.goal%></b></p>
+  </article>
 
-      <article>
-        <h2><%= @project.title %></h2>
-
-        <p><%= @project.description %></p>
-      </article>
 </section>
