--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -4,7 +4,10 @@
         <% errors = @project.errors.full_messages
            unless errors.empty? %>
             <% errors.each do |error| %>
-              <p><%= error %></p>
+              <ul>
+              <li><%= error %></li>
+             </ul>
+             <br></>
           <% end %>
       <% end %>
 
