--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -6,6 +6,7 @@
     <h2> <%= @project.title %></h2>
     <p> <%= @project.description %></p>
     </br>
+    <%#hjdasfgudjhak %>
     <p> <b><%= @project.goal%></b></p>
   </article>
 
