Update link_to method

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,5 +1,5 @@
 <div class="btn_box">
-  <%= link_to 'Add new Project', {:action => 'new'} %>
+  <%= link_to 'Add new Project', action: new_project_path %>
 </div>
 
 <section>
