--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -35,7 +35,7 @@ article:nth-child(3n + 1):nth-last-child(2) + article {
   width: 80px;
   padding: 20px 0;
   border-radius: 2px;
-  border: 1px solid royalblue;
+  border: 1px solid $secondary-color;
   cursor: pointer;
   text-align: center;
   position: absolute;
