--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -19,6 +19,7 @@ body {
   background-size: cover;
   font-family: 'Source Sans Pro', Arial, sans-serif;
   font-weight: 300;
+  word-wrap:break-word;
 }
 main {
   margin: 0 auto;
