Add app to heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
 </head>
 <body>
 <main>
+  <% if current_user %>
+      <h1><%= current_user.first_name %></h1>
+  <% else %>
+      <%= link_to 'Facebook login', '/auth/facebook' %>
+  <% end %>
+
   <%= yield %>
 </main>
 </body>
