--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -15,7 +15,7 @@ html {
   margin: 0;
 }
 body {
-  background: url("bg.jpg") no-repeat center fixed;
+  background: image-url("bg.jpg") no-repeat center fixed;
   background-size: cover;
   font-family: 'Source Sans Pro', Arial, sans-serif;
   font-weight: 300;
