--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -47,11 +47,12 @@ p {
   margin: 0 0 80px 0;
 }
 .btn_box {
+
+  background-color: $secondary-color;
   margin: 40px auto;
   width: 200px;
   padding: 20px 0;
   border-radius: 2px;
-  background-color: $secondary-color;
   cursor: pointer;
   text-align: center;
 }
@@ -61,6 +62,17 @@ p {
   text-decoration: none;
   padding: 20px 0;
 }
+
+.btn_facebook{
+  margin: 20px;
+  width: 100px;
+  cursor: pointer;
+  text-align: center;
+  border: none;
+}
+
+
+
 .field_with_errors {
   input {
     border: 2px red solid;
